[package]
name = "rect_packer"
version = "0.1.0"
authors = ["kryptan"]
keywords = ["texture", "packer", "sprite", "packing", "rectangle", "pack", "bin"]
description = "A rectangle packing library using the skyline heuristic"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kryptan/rect_packer.git"
homepage = "https://github.com/kryptan/rect_packer"
documentation = "http://docs.piston.rs/texture_packer"

[lib]
name = "rect_packer"

[dev-dependencies]
rand = "0.3.14"
image = "0.10.1"