[package]
name = "rect_packer"
version = "0.1.0"
authors = ["kryptan"]
keywords = ["texture", "packer", "sprite", "packing", "rectangle"]
description = "A rectangle packing library. Heavily tested with random data to ensure that it always produces correct result."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kryptan/rect_packer.git"
homepage = "https://github.com/kryptan/rect_packer"
documentation = "https://docs.rs/rect_packer/"

[lib]
name = "rect_packer"

[dev-dependencies]
rand = "0.3.14"
image = "0.10.1"
