[package]
name = "rect_packer"
version = "0.2.1"
authors = ["kryptan"]
keywords = ["texture", "packer", "sprite", "packing", "atlas"]
description = "A rectangle packing library. Heavily tested with random data to ensure that it always produces correct result."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kryptan/rect_packer.git"
homepage = "https://github.com/kryptan/rect_packer"
documentation = "https://docs.rs/rect_packer/"

[lib]
name = "rect_packer"

[dev-dependencies]
rand = "0.3.15"
image = "0.12.3"
